2008-03-25  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin

        Remove newly obsolete FrameLoaderClient methods

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        * WebCoreSupport/FrameLoaderClientGtk.h:

2008-03-20  Alp Toker  <alp@atoker.com>

        GTK+ build fix. Back out r31183. This patch also introduced API style
        issues.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::dispatchDecidePolicyForNavigationAction):
        * webkit/headers.pri:
        * webkit/webkit-marshal.list:
        * webkit/webkitdefines.h:
        * webkit/webkitnavigationaction.cpp: Removed.
        * webkit/webkitnavigationaction.h: Removed.
        * webkit/webkitprivate.cpp:
        * webkit/webkitprivate.h:
        * webkit/webkitwebview.cpp:
        * webkit/webkitwebview.h:

2008-03-20  Jasper Bryant-Greene  <jasper@unix.geek.nz>

        Reviewed and tweaked by Anders.

        Resolves http://bugs.webkit.org/show_bug.cgi?id=16092
        "[GTK] Middle-mouse click should allow opening a URL in a new tab"

        Created WebKitNavigationAction object exported through the API. The
        navigation-requested signal provides this object as context for the
        requested navigation, allowing the application to decide what to do
        with the navigation based on which mouse button was used, which
        modifier keys were held down, etc. This allows, for example, the
        application to open links in a new tab when either middle-click or
        control-click are used to initiate the navigation.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::dispatchDecidePolicyForNavigationAction):
        * webkit/headers.pri:
        * webkit/webkit-marshal.list:
        * webkit/webkitdefines.h:
        * webkit/webkitnavigationaction.cpp: Added.
        (webkit_navigation_action_finalize):
        (webkit_navigation_action_class_init):